@@ -1,7 +1,10 @@
 #!perl
 
+use utf8;
+
 use Test::Most;
 
+use HTTP::Request;
 use HTTP::Request::Common;
 use Plack::Builder;
 use Plack::MIME;
@@ -34,8 +37,9 @@ my $handler = builder {
         my $path   = $env->{PATH_INFO};
         my $type   = Plack::MIME->mime_type($path);
         my $client = $env->{'psgix.monitor.statsd'};
+        my $code   = $env->{REQUEST_METHOD} =~ /^\w+$/a ? 200 : 405;
         return [
-            $client ? 200 : 500,
+            $client ? $code : 500,
             [ 'Content-Type' => $type || 'text/plain; charset=utf8' ], ['Ok']
         ];
     };
@@ -167,6 +171,38 @@ test_psgi
             or note( explain \@logs);
 
     };
+
+
+    subtest 'bad method' => sub {
+
+        my $req = HTTP::Request->new( "SPỌRK" => '/' );
+
+        my $res = $cb->($req);
+
+        is $res->code, 405, 'unsupported method';
+
+        my @metrics = $stats->reset;
+
+        cmp_deeply \@metrics,
+          bag(
+            [ 'timing_ms', 'psgi.response.time',          ignore(), ],
+            [ 'timing_ms', 'psgi.request.content-length', 0, ],
+            [ 'increment', 'psgi.request.method.other', ],
+            [ 'set_add',   'psgi.request.remote_addr',     '127.0.0.1', ],
+            [ 'set_add',   'psgi.worker.pid',              ignore() ],
+            [ 'timing_ms', 'psgi.response.content-length', 2, ],
+            [ 'increment', 'psgi.response.content-type.text.plain', ],
+            [ 'increment', 'psgi.response.status.405', ],
+          ),
+          'expected metrics'
+          or note( explain \@metrics );
+
+        cmp_deeply \@logs, [], 'no errors logged'
+          or note( explain \@logs );
+
+        @logs = ();
+    };
+
 
   };
 
